changes 03.11